$Id: changelog.txt 92 2006-11-08 14:18:11Z epocman $

IBPP, A c++ Client API for Firebird (and Interbase)

History of Changes

---------------------------------------------------------------------------

(C) Copyright 2000-2006 T.I.P. Group S.A. and the IBPP Team (www.ibpp.org)

The contents of this file are subject to the IBPP License (the "License");
you may not use this file except in compliance with the License.  You may
obtain a copy of the License at http://www.ibpp.org or in the 'license.txt'
file which must have been distributed along with this file.

This software, distributed under the License, is distributed on an "AS IS"
basis, WITHOUT WARRANTY OF ANY KIND, either express or implied.  See the
License for the specific language governing rights and limitations
under the License.

--------------------------------------------------------------------------

The most recent addition to this file is always on top and has the highest
item number.

24. November 08, 2006

- Removed an unused variable in Database::Inactivate

23. July 23, 2006

- Fix mCursorOpened / CursorFree
- Added const to operator== and operator< on Date, Time, Timestamp
- Added operator!= and operator> on Data, Time, Timestamp
(Thanks Milan!)

22. July 18, 2006

- Added in packaging/debian a patch file to configure the project properly
in order to build it as a Debian package. Thanks to Pavel Stingl for
contributing this.


21. May 12, 2006

- Back ported a small addition from HEAD branch. When IBPP attempts to load
the FBCLIENT.DLL (Win32) from specific directories (either as reported by the
FB 1.5/2.0 registry keys or through the indirect use of ClientLibSearchPaths),
IBPP now alters the host process private PATH environment variable to add the
directory from where the load is attempted. This helps windows find local
copies of Microsoft runtime libraries when those are installed locally along
with the Firebird binaries but not generally available in the system paths.
