@@ -95,7 +95,7 @@ namespace IBPP
 {
 	//	Typically you use this constant in a call IBPP::CheckVersion as in:
 	//	if (! IBPP::CheckVersion(IBPP::Version)) { throw .... ; }
-	const uint32_t Version = (2<<24) + (5<<16) + (3<<8) + 1; // Version == 2.5.3.1
+	const uint32_t Version = (2<<24) + (5<<16) + (3<<8) + 2; // Version == 2.5.3.2
 
 	//	Dates range checking
 	const int MinDate = -693594;	//  1 JAN 0001
